Avoid scrollbar for the body

--- a/src/components/SinglePagePdfView/OutlineView/component.scss
+++ b/src/components/SinglePagePdfView/OutlineView/component.scss
@@ -1,4 +1,4 @@
 .outline-container {
-  height: 100vh;
+  height: calc(100vh - 11rem);
   overflow-y: auto;
 }
