--- a/src/components/SinglePagePdfView/component.scss
+++ b/src/components/SinglePagePdfView/component.scss
@@ -1,7 +1,7 @@
 .pdf-content-view {
   display: flex;
   justify-content: center;
-  height: 100vh;
+  height: calc(100vh - 5.5rem);
   overflow-y: auto;
 }
 
